<resources>
    <string name="app_name">.itHelps</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title">Title</string>
    <string name="message">Message</string>
    <string name="schedule_notification">Schedule Notification</string>
    <string name="affirmation1">I am strong.</string>
    <string name="affirmation2">I believe in myself.</string>
    <string name="affirmation3">Each day is a new opportunity to grow and be a better version of myself.</string>
    <string name="affirmation4">Every challenge in my life is an opportunity to learn from.</string>
    <string name="affirmation5">I have so much to be grateful for.</string>
    <string name="affirmation6">Good things are always coming into my life.</string>
    <string name="affirmation7">New opportunities await me at every turn.</string>
    <string name="affirmation8">I have the courage to follow my heart.</string>
    <string name="affirmation9">Things will unfold at precisely the right time.</string>
    <string name="affirmation10">I will be present in all the moments that this day brings.</string>
    <string name="affirmation11">Я нескінченно вірю в себе і свої сили.</string>
    <string name="affirmation12">Я люблю себе за все від кінчиків пальців ніг до самої верхівки.</string>
    <string name="affirmation13">Я всюди бачу можливість заробити гроші! Я легко реалізую найкращі з можливостей!</string>
    <string name="affirmation14">Я отримую свої гроші творчим, творчим та чесним шляхом!</string>
    <string name="affirmation15">Я завжди притягую у своє життя багатих та успішних людей.</string>
    <string name="affirmation16">Я завжди притягую у своє життя величезну кількість ресурсів та ідей.</string>
    <string name="affirmation17">Я гідний багатства, я йду до нього впевнено та невблаганно.</string>
    <string name="affirmation18">Мої доходи визначаються лише моїм ставленням до життя. Я успішний і досягаю всього чого захочу.</string>
    <string name="affirmation19">Гроші допомагають мені духовно розвиватися і досягати моїх духовних цілей.</string>
    <string name="affirmation20">Я заробляю гроші, щоб купувати те, що хочу.</string>
    <string name="affirmation21">Я вартий великих грошей. Я гідний жити у розкоші!</string>
    <string name="affirmation22">Я довіряю життю!</string>
    <string name="affirmation23">Я з легкістю і радістю віддаю і отримую гроші!</string>
    <string name="affirmation24">Кожен з моїх задумів реалізується!</string>
    <string name="affirmation25">Я приймаю все найкраще в цьому світі, адже я цього заслуговую!</string>
    <string name="affirmation26">Я поширюю любов і створюю свій люблячий світ!</string>
    <string name="affirmation27">Я віддаю величезну кількість любові, а отримую ще більше!</string>
    <string name="affirmation28">Мій світ наповнений щастям і гармонією, за що я вдячна!</string>
    <string name="affirmation29">Робота задовольняє мене в усьому!</string>
    <string name="affirmation30">Я відкидаю всі страхи і сумніви!</string>
    <string name="affirmation31">Я люблю своє тіло!</string>
    <string name="affirmation32">У моєму світі все вже добре!</string>
    <string name="quote1">Успіх нічому не вчить. Він тільки переконує розумних людей, що вони не можуть програти (Білл Ґейтс)</string>
    <string name="quote2">Успіх — єдиний непростимий гріх по відношенню до свого близького (Ф. Раневська)</string>
    <string name="quote3">Успіх — це рух від невдачі до невдачі без втрати ентузіазму (Черчіль Вінстон)</string>
    <string name="quote4">Успіх не прийде до Вас. Ви самі повинні дійти до нього (Марва Коллінз)</string>
    <string name="quote5">Успіх — це не стільки те, що ми маємо, скільки те, ким ми стаємо в результаті (Джим Рон)</string>
    <string name="quote6">Секрет життєвого успіху: будь готовий до можливості до того, як вона виникне (Бенджамін Дізраелі)</string>
    <string name="quote7">Шість частин ключа до успіху: щирість, особистісна цілісність, скромність, ввічливість, мудрість, милосердя (Вільям Меннінгер)</string>
    <string name="quote8">Успіх не є ключем до щастя. Щастя — ось ключ до успіху. Якщо ви любите те, що робите, ви будете успішним (Альберт Швейцер)</string>
    <string name="quote9">Немає шляху до успіху. Успіх — є шлях (Михайло Шувалов)</string>
    <string name="quote10">Удосконалення – це зміни, бути досконалим – означає змінюватися постійно. (Вінстон Черчилль)</string>
    <string name="quote11">Про секрети успіху найпевніше міркують невдахи (Марсель Ашарі)</string>
    <string name="quote12">Життя на 10% складається з того, що з вами відбувається і 90%, з того, як ви на це реагуєте. (Чарльз Свіндол) </string>
    <string name="quote13">Ти ніколи не перепливеш океан, якщо боятимешся втратити берег із виду. (Христофор Колумб)</string>
    <string name="quote14">Говорять, що мотивація триває не довго. Що ж, свіжість після ванни – теж. Тому піклуватися про них варто щодня. (Зіг Зиглар)</string>
    <string name="quote15">Досконалість – це не тоді, коли нічого додати, а тоді, коли нічого відняти. (Антуан де Сент-Екзюпері)</string>
    <string name="quote16">Повірте, що зможете, і пів шляху вже пройдено. (Теодор Рузвельт)</string>
    <string name="quote17">Одна перемога не веде до успіху, на відміну від постійного бажання перемагати. (Вінс Ломбарді)</string>
    <string name="quote18">Людина, яка ніколи не здійснювала помилок, ніколи не пробувала зробити щось по-іншому. (Альберт Ейнштейн)</string>
    <string name="quote19">Здійснюйте свої мрії, або хтось візьме вас на роботу для здійснення своїх. (Фарра Грей)</string>
    <string name="quote20">Запам’ятайте, іноді не отримати бажаного – найбільша удача. (Далай-лама)</string>
    <string name="quote21">Або напишіть книгу, варту уваги, або зробіть щось, варте написання книги. (Бенджамін Франклін)</string>
    <string name="quote22">Єдиний спосіб зробити видатну роботу – щиро любити те, що робиш. (Стів Джобс)</string>
    <string name="quote23">Якщо ти можеш щось уявити – ти можеш цього досягти! (Зіг Зіглар)</string>
    <string name="quote24">Спочатку робіть, що потрібно. Тоді – те, що можливо. Лиш тоді ви побачите, що робите неможливе. (Св. Франциск Асізський)</string>
    <string name="quote25">Найкращий метод, щоб почати щось робити – перестати говорити і почати робити. (Волт Дісней)</string>
    <string name="quote26">Від життя ви отримуєте тільки те, що просите. Не бійтеся просити більше. (Опра Вінфрі)</string>
    <string name="quote27">Постійне прагнення бути кращим є обов’язком людини. Це вже винагорода. Все інше в Божих руках. (Магатма Ґанді)</string>
    <string name="quote28">Щаслива людина настільки задоволена сьогоденням, що не маю часу думати про майбутнє. (Альберт Ейнштейн)</string>
    <string name="quote29">Ви не повинні зупинятися, навіть якщо щось може йти не так, як би хотілось. (Майкл Джордан)</string>
    <string name="quote30">Нічого не досягне у житті той, хто не має сміливості ризикувати. (Мухаммед Алі)</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Шерлок Холмс</string>
    <string name="nav_header_subtitle">sherlock.holmes@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="menu_habits">Мои привычки</string>
    <string name="menu_about_app">О приложении</string>
    <string name="action_sort">Сортировать</string>
    <string name="menu_add_habit">Добавить привычку</string>
    <string name="tab_good_habit">Хорошие</string>
    <string name="tab_bad_habit">Плохие</string>
    <string name="input_name">Название</string>
    <string name="input_description">Описание</string>
    <string name="type_bad">Плохая</string>
    <string name="type_good">Хорошая</string>
    <string name="input_count">Количество</string>
    <string name="input_frequency">Периодичность</string>
    <string name="sort_date">по дате</string>
    <string name="sort_priority">по приоритету</string>
    <string name="sort_name">по названию</string>
    <string name="title_sort">Сортировать:</string>
    <string name="hint_search">Поиск</string>
    <string name="btn_ok">Ок</string>
    <string name="title_about_app">Тестовое задание для Doubletapp</string>
    <string name="subtitle_about_app">Разработано Зелинской Илоной</string>
    <string name="btn_add_color">Добавить цвет</string>
    <string name="btn_choose">Выбрать</string>
    <string name="btn_cancel">Отмена</string>
    <string name="btn_clear">Очистить</string>
    <string name="action_color">Выбрать цвет</string>
    <string name="affirmation">Affirmation</string>
    <string name="breathing_delay">Затримка</string>
    <string name="description_of_breathing">Ця практика допоможе тобі справитись з стресом. Дихай глибше, щоб розслабити тіло і розум.</string>
    <string name="breathing_logo">Breathing Logo</string>
    <string name="breathing_type">Breathing type</string>
    <string name="set_count">Кількість сетів</string>
    <string name="start_breathing_exersice">Почати вправу</string>
    <string name="breathing_exhalation">Видих</string>
    <string name="breathing_breath">Вдих</string>
    <string name="breathing">Дихання</string>
    <string name="breathing_description">Дихальні вправи, які допоможуть тобі розслабитись і достигнути ясного стану розуму.</string>
    <string name="breathing_refresh">Перезагрузка</string>
    <string name="deep_breathing">Глибоке \nдихання</string>
    <string name="awakening">Пробудження</string>
    <string name="rest">Спокій</string>
    <string name="pain_killer">Полегшення болю</string>
    <string name="sos">SOS</string>
    <string name="button_back">Button back</string>
    <string name="button_success">Button success</string>
    <string name="diary_question">Що з тобою сьогодні відбулось? Які емоції тебе наповнювали?</string>
    <string name="edit_text_hint_say_more">Розкажи детальніше...</string>
    <string name="my_diary">Мій щоденник</string>
    <string name="breathing_animation">Breathing animation</string>
    <string name="insights">Інсайти</string>
    <string name="my_mood">Мій настрій</string>
    <string name="button_go_to_next_page">Button go to next page</string>
    <string name="your_space">Твій простір</string>
    <string name="write_and_reflect">Записуй і рефлексуй</string>
    <string name="mood_tracker">Трекер \nнастрою</string>
    <string name="your_diary">Твій \nщоденник</string>
    <string name="q_and_a">Питання і \nвідповіді</string>
    <string name="condition_control">Контроль \nстану</string>
    <string name="long_term_growth">Довгостроковий ріст</string>
    <string name="affirmations">Аффір\nмації</string>
    <string name="quotes">Цитати</string>
    <string name="articles">Статті</string>
    <string name="calming_techniques">Заспокійливі техніки</string>
    <string name="meditations">Меди\nтація</string>
    <string name="button_start">Button start</string>
    <string name="button_stop">Button stop</string>
    <string name="button_set">Set</string>
    <string name="mood">Mood</string>
    <string name="mood_reason">Що послугувало причиною такого настрою?</string>
    <string name="button_delete">Button delete</string>
    <string name="button_edit">Button edit</string>
    <string name="avatar">Avatar</string>
    <string name="method_of_execution">Яким чином ти маєш це виконати?</string>
    <string name="task_chapter">Обери розділ для задачі.</string>
    <string name="choose_date">Обери дату виконання.</string>
    <string name="name_of_task">Дай назву задачі...</string>
    <string name="type_description_of_task">Розкажи детальніше...</string>
    <string name="today">Сьогодні</string>
    <string name="tomorrow">Завтра</string>
    <string name="custom_date">Custom</string>
    <string name="save">Save</string>
</resources>