<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".presentation.todo.add.TodoAddFragment">


    <View
        android:id="@+id/view2"
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_1dp"
        android:layout_marginTop="@dimen/size_64dp"
        android:background="#D4D4D4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/btnClose"
        android:layout_width="@dimen/size_36dp"
        android:layout_height="@dimen/size_36dp"
        android:layout_marginStart="@dimen/size_16dp"
        android:background="?android:attr/selectableItemBackgroundBorderless"
        android:src="@drawable/ic_baseline_close_24"
        app:layout_constraintBottom_toTopOf="@+id/view2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/button_back" />

    <TextView
        android:id="@+id/tvTodayCover"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/view2"
        app:layout_constraintEnd_toStartOf="@+id/btnSave"
        app:layout_constraintStart_toEndOf="@+id/btnClose"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Сьогодні" />

    <ImageView
        android:id="@+id/btnSave"
        android:layout_width="@dimen/size_36dp"
        android:layout_height="@dimen/size_36dp"
        android:layout_marginEnd="@dimen/size_16dp"
        android:background="?android:attr/selectableItemBackgroundBorderless"
        android:src="@drawable/ic_baseline_done_24"
        app:layout_constraintBottom_toTopOf="@+id/view2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/button_success" />

    <TextView
        android:id="@+id/tvQuestionTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/size_24dp"
        android:layout_marginTop="@dimen/size_8dp"
        android:layout_marginEnd="@dimen/size_24dp"
        android:text="@string/name_of_task"
        android:textColor="@color/black"
        android:textSize="@dimen/textSize_18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view2" />

    <TextView
        android:id="@+id/tvQuestionDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/size_24dp"
        android:layout_marginTop="@dimen/size_24dp"
        android:layout_marginEnd="@dimen/size_24dp"
        android:text="@string/method_of_execution"
        android:textColor="@color/black"
        android:textSize="@dimen/textSize_18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etTitle" />

    <TextView
        android:id="@+id/tvQuestionChapters"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/size_24dp"
        android:layout_marginTop="@dimen/size_24dp"
        android:layout_marginEnd="@dimen/size_24dp"
        android:text="@string/task_chapter"
        android:textColor="@color/black"
        android:textSize="@dimen/textSize_18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etDescription" />

    <TextView
        android:id="@+id/tvQuestionDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/size_24dp"
        android:layout_marginTop="@dimen/size_24dp"
        android:layout_marginEnd="@dimen/size_24dp"
        android:text="@string/choose_date"
        android:textColor="@color/black"
        android:textSize="@dimen/textSize_18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinnerChapters" />

    <EditText
        android:id="@+id/etTitle"
        android:layout_width="@dimen/size_0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/size_16dp"
        android:layout_marginEnd="@dimen/size_16dp"
        android:background="@drawable/multi_line_text_style"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/name_of_task"
        android:inputType="textPersonName"
        android:maxLines="1"
        android:padding="@dimen/size_8dp"
        android:textColor="#000000"
        android:textColorLink="@color/black"
        android:textCursorDrawable="@drawable/black_cursor"
        android:textSize="@dimen/textSize_16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvQuestionTitle"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/etDescription"
        android:layout_width="@dimen/size_0dp"
        android:layout_height="@dimen/size_146dp"
        android:layout_marginStart="@dimen/size_16dp"
        android:layout_marginEnd="@dimen/size_16dp"
        android:background="@drawable/multi_line_text_style"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/type_description_of_task"
        android:inputType="textMultiLine"
        android:padding="@dimen/size_8dp"
        android:textColor="#000000"
        android:textColorLink="@color/black"
        android:textCursorDrawable="@drawable/black_cursor"
        android:textSize="@dimen/textSize_16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvQuestionDescription"
        android:importantForAutofill="no" />

    <Spinner
        android:id="@+id/spinnerChapters"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/size_16dp"
        android:layout_marginTop="@dimen/size_8dp"
        android:layout_marginEnd="@dimen/size_16dp"
        android:entries="@array/array_of_chapters"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvQuestionChapters" />

    <DatePicker
        android:id="@+id/datePicker"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/size_24dp"
        android:layout_marginEnd="@dimen/size_24dp"
        android:calendarViewShown="false"
        android:datePickerMode="spinner"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroupDates" />

    <RadioGroup
        android:id="@+id/radioGroupDates"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/size_24dp"
        android:layout_marginTop="@dimen/size_8dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvQuestionDate">

        <RadioButton
            android:id="@+id/rbToday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/size_8dp"
            android:checked="true"
            android:text="@string/today"
            android:textSize="@dimen/textSize_12sp" />

        <RadioButton
            android:id="@+id/rbTomorrow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/size_8dp"
            android:text="@string/tomorrow"
            android:textSize="@dimen/textSize_12sp" />

        <RadioButton
            android:id="@+id/rbCustom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/size_16dp"
            tools:text="12.08.2022"
            android:textSize="@dimen/textSize_12sp" />

    </RadioGroup>

    <Button
        android:id="@+id/btnCustomDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/size_24dp"
        android:text="@string/custom_date"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/radioGroupDates"
        app:layout_constraintTop_toTopOf="@+id/radioGroupDates" />

    <Button
        android:id="@+id/btnSaveDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/radioGroupDates"
        app:layout_constraintTop_toTopOf="@+id/radioGroupDates" />


</androidx.constraintlayout.widget.ConstraintLayout>