<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.moodAdd.MoodAddFragment">

    <View
        android:id="@+id/view2"
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_1dp"
        android:layout_marginTop="@dimen/size_64dp"
        android:background="#D4D4D4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/btnClose"
        android:layout_width="@dimen/size_36dp"
        android:layout_height="@dimen/size_36dp"
        android:layout_marginStart="@dimen/size_16dp"
        android:background="?android:attr/selectableItemBackgroundBorderless"
        android:src="@drawable/ic_baseline_close_24"
        app:layout_constraintBottom_toTopOf="@+id/view2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/button_back" />

    <TextView
        android:id="@+id/tvMood"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/ivMood"
        app:layout_constraintStart_toStartOf="@+id/ivMood"
        app:layout_constraintTop_toBottomOf="@+id/ivMood"
        tools:text="Mood" />

    <ImageView
        android:id="@+id/ivMood"
        android:layout_width="@dimen/size_24dp"
        android:layout_height="@dimen/size_24dp"
        android:layout_marginTop="@dimen/size_12dp"
        android:src="@drawable/anger"
        app:layout_constraintEnd_toStartOf="@+id/btnSave"
        app:layout_constraintStart_toEndOf="@+id/btnClose"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/mood" />

    <ImageView
        android:id="@+id/btnSave"
        android:layout_width="@dimen/size_36dp"
        android:layout_height="@dimen/size_36dp"
        android:layout_marginEnd="@dimen/size_16dp"
        android:background="?android:attr/selectableItemBackgroundBorderless"
        android:src="@drawable/ic_baseline_done_24"
        app:layout_constraintBottom_toTopOf="@+id/view2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/button_success" />

    <TextView
        android:id="@+id/tvQuestionTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/size_24dp"
        android:layout_marginTop="@dimen/size_8dp"
        android:layout_marginEnd="@dimen/size_24dp"
        android:text="@string/mood_reason"
        android:textColor="@color/black"
        android:textSize="@dimen/textSize_18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view2" />

    <EditText
        android:id="@+id/editTextTextOfDiary"
        android:layout_width="@dimen/size_0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/size_16dp"
        android:layout_marginEnd="@dimen/size_16dp"
        android:background="@drawable/multi_line_text_style"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/edit_text_hint_say_more"
        android:inputType="textMultiLine"
        android:padding="8dp"
        android:textColor="#000000"
        android:textColorLink="@color/black"
        android:textCursorDrawable="@drawable/black_cursor"
        android:textSize="@dimen/textSize_16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvQuestionTitle"
        android:importantForAutofill="no" />

</androidx.constraintlayout.widget.ConstraintLayout>